components/FieldPrintLogo/FieldPrintLogo.module.scss
@import "styles/variables";

.field {
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: 12;
    display: none;

    @media (min-width: $media-screen-notebook) {
        display: flex;
    }
}

.logo {
    width: 32px;
    height: auto;
    position: absolute;
}

